<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_settings" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/txt_sign_in1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sign_username_layout"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sign_pass_layout"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPassword"
                android:layout_weight="1" />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:text="@string/txt_sign_in"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:background="@drawable/shape_button"
            android:layout_height="0dp" />
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/txt_sign_reset_layout"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_weight="0.5"
             android:layout_height="0dp">

         </LinearLayout>
    </LinearLayout>

</LinearLayout>