<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
            <com.invision.adapter.AutoScrollViewPager
                android:id="@+id/auto_viewpager_start_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">
            </com.invision.adapter.AutoScrollViewPager>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/txt_startapp"
                android:gravity="center"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/shape_button"
            android:text="@string/txt_create_new_account"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:layout_height="0dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:text="@string/txt_sign_in"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_button"
            android:layout_height="0dp" />

</LinearLayout>